--- a/package.json
+++ b/package.json
@@ -68,21 +68,21 @@
     "postcss": "^5.2.15",
     "postcss-loader": "^1.3.3",
     "q": "^1.4.1",
-    "react": "^15.6.0",
+    "react": "^16.0.0",
     "react-autobind": "^1.0.6",
-    "react-autosize-textarea": "^0.4.3",
+    "react-autosize-textarea": "^0.4.9",
     "react-cookie": "^0.2.3",
-    "react-copy-to-clipboard": "^4.2.3",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-document-title": "^2.0.2",
-    "react-dom": "^15.6.0",
+    "react-dom": "^16.0.0",
     "react-dropzone": "^4.1.0",
-    "react-hot-loader": "3.0.0-beta.7",
-    "react-hotkey": "^0.7.0",
-    "react-mixin": "^3.0.5",
-    "react-router": "^3.0.3",
-    "react-select": "^1.0.0-rc.3",
-    "react-table": "^6.5.3",
-    "react-tagsinput": "^3.15.1",
+    "react-hot-loader": "3.1.3",
+    "react-hotkeys": "^0.10.0",
+    "react-mixin": "^4.0.0",
+    "react-router": "^3.2.0",
+    "react-select": "^1.0.0",
+    "react-table": "^6.7.4",
+    "react-tagsinput": "^3.19.0",
     "reflux": "^6.4.1",
     "reflux-core": "^1.0.0",
     "rimraf": "^2.4.3",
@@ -108,7 +108,7 @@
     "type": "git",
     "url": "https://github.com/kobotoolbox/kpi.git"
   },
-  "author": "alex.dorey@kobotoolbox.org, esmail.fadae@kobotoolbox.org, john.milner@kobotoolbox.org",
+  "author": "alex.dorey@kobotoolbox.org, esmail.fadae@kobotoolbox.org, john.milner@kobotoolbox.org, penar@kobotoolbox.org",
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/kobotoolbox/kpi/issues"
